--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Expired Domains Finder</title>
+  <title>unregisterd Domains Finder</title>
   <style>
     body {
       width: 400px;
@@ -50,10 +50,10 @@
   </style>
 </head>
 <body>
-  <h1>Expired Domains Finder</h1>
+  <h1>Unregisterd Domains Finder</h1>
   <div class="info" id="info">Loading...</div>
   <div class="domain-list" id="domainList">
-    <div class="no-domains">Scanning for expired domains...</div>
+    <div class="no-domains">Scanning for unregisterd domains...</div>
   </div>
   <button id="copyAll">Copy All Domains</button>
   <button id="rescan">Rescan Page</button>
