make firefox compatible + fix

--- a/popup.html
+++ b/popup.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>unregisterd Domains Finder</title>
+  <title>Unregisterd Domains Finder</title>
   <style>
     body {
       width: 400px;
